# minimint

./: Cargo.nix  Cargo.toml  Dockerfile  asd.sh  client.json  crate-hashes.json  default.nix  derivative.nix  flake.nix  index.html  log.txt  log2.txt  result  search-index.js  server-0.json  settings.html  shell.nix
clientd/: all.html  enum.ClientdError.html  fn.call.html  index.html  struct.CoinsByTier.html  struct.InfoResponse.html  struct.Json.html  struct.PegInAddressResponse.html  struct.PegInOutResponse.html  struct.PegInPayload.html  struct.PendingResponse.html  struct.PendingTransaction.html  struct.WaitBlockHeightPayload.html
clientd_cli/: all.html  enum.Commands.html  fn.main.html  fn.print_response.html  index.html  struct.Cli.html
configgen/: all.html  fn.main.html  index.html  struct.Options.html
crypto/tbs/: Cargo.toml
docs/: database.md  nix_instructions.md
fedimint/: all.html  enum.CoreError.html  fn.run_fedimint.html  index.html  struct.FedimintServer.html  struct.OsRngGen.html  type.PeerMessage.html
fedimint_api/: all.html  enum.ParseAmountError.html  index.html  macro.__api_endpoint.html  struct.Amount.html  struct.OutPoint.html  struct.PeerId.html  struct.TransactionId.html  trait.BitcoinHash.html
fedimint_core/: all.html  enum.CoreError.html  index.html
fedimint_derive/: all.html  derive.Decodable.html  index.html  (+2 more)
modules/minimint-ln/: Cargo.toml
modules/minimint-ln/src/: config.rs  db.rs  lib.rs
modules/minimint-ln/src/contracts/: account.rs  incoming.rs  mod.rs  outgoing.rs
modules/minimint-ln/tests/: ln_contracts.rs
(+1404 files in other folders)
