[package]
name = "tbs"
version = "0.1.0"
authors = ["elsirion <elsirion@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bls12_381 = { version = "0.6" }
ff = "0.11"
group = "0.11"
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
sha3 = "0.9"

[dev-dependencies]
structopt = "0.3"
bincode = "1"