[package]
name = "minimint-ln"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bincode = "1"
bitcoin_hashes = "0.10"
lightning-invoice = "0.10"
minimint-api = { path = "../../minimint-api" }
secp256k1 = "0.20"
threshold_crypto = "0.4"